Contrast fix (2)

--- a/css/style.css
+++ b/css/style.css
@@ -310,9 +310,9 @@ h1 {
     font-family: 'Press Start 2P', cursive;
     padding: 2vh 0;
     border: 0.75vh black solid;
-    background: rgb(150,150,150);
+    background: rgb(100,100,100);
     color: white;
-    box-shadow: inset -0.5vw 0 rgb(70,70,70), inset 0 0.5vw rgb(205,205,205), inset 0 -0.5vw rgb(70,70,70), inset 0.5vw 0 rgb(205,205,205), 0.5vw 0.5vw rgb(0 0 0 / 25%);
+    box-shadow: inset -0.5vw 0 rgb(20,20,20), inset 0 0.5vw rgb(155,155,155), inset 0 -0.5vw rgb(20,20,20), inset 0.5vw 0 rgb(155,155,155), 0.5vw 0.5vw rgb(0 0 0 / 25%);
     text-shadow: 0.25vw 0.25vw 0 rgb(0 0 0 / 25%);
     transition: none;
 }
